fixed z-index video

--- a/src/app/containers/Ataraxia/containers/Main/main.css
+++ b/src/app/containers/Ataraxia/containers/Main/main.css
@@ -19,6 +19,7 @@
     background-color: black;
     video { 
         position: absolute;
+        z-index: 1;
         top: 50%;
         left: 50%;
         min-height: 100%;
